app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
/* ... */
//  Group of fields with labels above in line
.admin__field-group-columns {
    &.admin__field-control.admin__control-grouped {
        #mix-grid .column(@field-grid__columns, @field-grid__columns);
    }

    & > .admin__field {
        &:first-child {
            & > .admin__field-label {
                float: none;
                margin: 0;
                opacity: 1;
                position: static;
                text-align: left;
            }
        }

        &:nth-child(n + 2) {
            &:not(.admin__field-option):not(.admin__field-group-show-label):not(.admin__field-date) {
                > .admin__field-label[class] {
                    &:extend(.abs-visually-hidden-reset all);
                }
            }
        }
    }

    .admin__control-select {
        width: 100%;
    }
}

//  Additional field for group
.admin__field-group-additional {
    &:extend(.abs-field-no-label all);
    clear: both;

    .action-additional {
        margin-top: @indent__s;
    }

    .action-basic {
        width: 100%;
    }
}

//  Show label for field in group
.admin__field-group-show-label {
    white-space: nowrap;

    > .admin__field-label,
    > .admin__field-control {
        display: inline-block;
        vertical-align: top;
    }

    > .admin__field-label {
        margin-right: @field-group-label__padding;
    }
}

//
//  Complex Field
//  _____________________________________________

.admin__field-complex {
    &:extend(.abs-clearfix all);
    margin: @indent__s 0 @indent__l;
    padding-left: @indent__s;

    .admin__field:not(._hidden) + & {
        margin-top: 3rem;
    }

    .admin__field-complex-title {
        clear: both;
        color: @collapsible-title__color;
        font-size: @collapsible-title__font-size;
        font-weight: @font-weight__semibold;
        letter-spacing: .025em;
        margin-bottom: @indent__s;
    }

    .admin__field-complex-elements {
        float: right;
        max-width: 40%;

        button {
            margin-left: @indent__s;
        }
    }

    .admin__field-complex-content {
        max-width: 60%;
        overflow: hidden;
    }

    .admin__field-complex-text {
        margin-left: -@indent__s;
    }

    //  Field with empty table and no thead
    + .admin__field {
        &._empty {
            &._no-header {
                margin-top: -@indent__l;
            }
        }
    }
}

//
//  Form legend
//  _____________________________________________

.admin__legend {
    //  ToDo UI: add form legend styles. Check if they doon't conflict with create order page form legend styles
    float: left;
    position: static;
    width: 100%;

    &:extend(.abs-fieldset-legend);
    & + br {
        clear: left;
        display: block;
        height: 0;
        overflow: hidden;
    }
}

